# AI-Konsultant

./: .coverage  .env  .env.example  .gitignore  README.md  create_index.py  main.py  pyproject.toml  pytest.ini  Федеральный закон от 30.12.2004 N 214-ФЗ (ред. от 26.12.2024.docx
bot/: config.py  database.py  rag_service.py
bot/core/: logger.py  prompts.py  resources.py
bot/graph/: nodes.py  tools.py  workflow.py
bot/handlers/: base.py  chat.py
data/: Закон РФ от 07.02.1992 N 2300-1 (ред. от 28.12.2025, с изм..docx
scripts/: ingest_data.py  legal_parser.py
test_db/: bm25_retriever.pkl
tests/: conftest.py  test_bot.py  test_config.py  test_database.py  test_graph.py  test_ingestion.py  test_rag.py  test_resources.py  test_tools.py
