[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "chromadb>=1.5.1",
    "sentence-transformers>=5.2.3",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-chroma>=1.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-huggingface>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
