[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.12.0",
    "chromadb>=0.5.0,<0.6.0",
    "sentence-transformers>=3.0.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "rank-bm25>=0.2.2",
    "langchain==0.3.17",
    "pymupdf>=1.27.1",
    "aiosqlite>=0.22.1",
    "langgraph>=1.0.1",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
